--- a/prokudin-gorskii/Contact.html
+++ b/prokudin-gorskii/Contact.html
@@ -35,6 +35,7 @@
           </div>
           <div class="u-custom-menu u-nav-container" wfd-invisible="true">
             <ul class="u-nav u-spacing-30 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="Prokudin-Gorskii.html" style="padding: 10px 0px;">Prokudin-Gorskii</a>
+</li><li class="u-nav-item"><a class="u-border-2 u-border-active-palette-1-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-1-base u-text-grey-90 u-text-hover-grey-90" href="https://normankarr.com/computational-photography/filters-and-frequencies/" style="padding: 10px 0px;">Filters and Frequencies</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -42,12 +43,15 @@
               <div class="u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Prokudin-Gorskii.html" style="padding: 10px 0px;">Prokudin-Gorskii</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://normankarr.com/computational-photography/filters-and-frequencies/" style="padding: 10px 0px;">Filters and Frequencies</a>
 </li></ul>
               </div>
             </div>
             <div class="u-black u-menu-overlay u-opacity u-opacity-70" wfd-invisible="true"></div>
           </div>
         </nav>
+        <a href="https://normankarr.com/computational-photography/prokudin-gorskii/" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-btn-1">Prokudin Gorskii</a>
+        <a href="https://normankarr.com/computational-photography/filters-and-frequencies/" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-btn-2">Filters and Frequencies</a>
       </div></header> 
     
     
