--- a/filters-and-frequencies/Filters-and-Frequencies.html
+++ b/filters-and-frequencies/Filters-and-Frequencies.html
@@ -527,7 +527,7 @@
     <section class="u-clearfix u-palette-4-light-3 u-section-10" id="sec-324b">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">
-          <span style="font-weight: 700;">Images Blending</span>
+          <span style="font-weight: 700;">Image Blending</span>
           <br>
         </h1>
         <h2 class="u-text u-text-default u-text-2">1. Methodology<br>
@@ -731,7 +731,7 @@
       <p class="u-text u-text-7">The images above are the result of two different Iron Man images: an image of the silver Mark 2 armour blended with the red and gold Mark 3 armour.&nbsp; However, this idea of fading from gray to colored gave me an idea of taking on image and creating a color gradient on it. This can easily be done with the blending algorithm by taking an image and a grayscaled version of that image, and then running the blend algorithm on the two images. This then creates a gradual grayscale-to-color blend across the masks. An example is seen below in the gallery with a beach photograph.</p>
     </section>
     <section class="u-clearfix u-section-14" id="sec-aedc">
-      <div class="u-palette-4-light-3 u-shape u-shape-rectangle u-shape-1"></div>
+      <div class="u-expanded-width u-palette-4-light-3 u-shape u-shape-rectangle u-shape-1"></div>
       <h2 class="u-text u-text-default u-text-1">3. Varying the Mask</h2>
       <p class="u-text u-text-2">One of the nice things about the masks is that it is really easy to create different masks and then blending will automatically blend all edges of the mask. Thus, we can create and apply many different mask shapes to achieve different structures of blending.</p>
       <div class="u-list u-list-1">
@@ -837,16 +837,5 @@
         <p class="u-small-text u-text u-text-variant u-text-1">CS 194-26: Computational Photography and Computer Vision<br>Project 2: Fun with Filters and Frequencies<br>Norman Karr | nkarr11@berkeley.edu | UC Berkeley
         </p>
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="https://nicepage.com/" target="_blank">
-        <span>Website Builder Software</span>
-      </a>. 
-    </section>
   </body>
 </html>
