--- a/filters-and-frequencies/index.html
+++ b/filters-and-frequencies/index.html
@@ -104,7 +104,7 @@
             </div>
             <div class="u-container-style u-custom-item u-list-item u-palette-3-light-3 u-repeater-item u-list-item-3">
               <div class="u-container-layout u-similar-container u-container-layout-3">
-                <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="491" data-image-height="484" src="images/ironstark_hybrid.png">
+                <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="491" data-image-height="484" src="images/ironstark_hybrid1.png">
                 <h3 class="u-text u-text-default u-text-6">Hybrid Images</h3>
                 <p class="u-text u-text-7">1. Methodology<br>2. Fourier Transforms<br>3. Gallery<br>
                   <br>
@@ -479,7 +479,65 @@
         </div>
       </div>
     </section>
-    <section class="u-clearfix u-white u-section-9" id="sec-1396">
+    <section class="u-clearfix u-white u-section-9" id="sec-9317">
+      <div class="u-expanded-width u-palette-3-light-3 u-shape u-shape-rectangle u-shape-1"></div>
+      <div class="u-container-style u-group u-group-1">
+        <div class="u-container-layout">
+          <h2 class="u-text u-text-default u-text-1">Introducing Color</h2>
+          <p class="u-text u-text-2"> I made a few attempts at making colorized hybrids and made a few observations. Firstly, very little color makes it through the highpass image thus color is more important for the low Frequency component. Secondly, colors of the two images being combined should be relatively similar otherwise both images break down. In the case of Iron Man and Tony Stark, the colors actually still work because the yellow helmet is still able to complement Tony Starks skin. Lastly, one of the tricks I found to make color brighter was to clip the colorways of the image then normalize across the entire image.</p>
+        </div>
+      </div>
+      <div class="u-gallery u-layout-grid u-lightbox u-show-text-on-hover u-gallery-1">
+        <div class="u-gallery-inner u-gallery-inner-1">
+          <div class="u-effect-fade u-gallery-item">
+            <div class="u-back-slide" data-image-width="491" data-image-height="484">
+              <img class="u-back-image u-expanded" src="images/tony1.png">
+            </div>
+            <div class="u-over-slide u-shading u-over-slide-1">
+              <h3 class="u-gallery-heading"></h3>
+              <p class="u-gallery-text"></p>
+            </div>
+          </div>
+          <div class="u-effect-fade u-gallery-item">
+            <div class="u-back-slide" data-image-width="491" data-image-height="484">
+              <img class="u-back-image u-expanded" src="images/ironman1.png">
+            </div>
+            <div class="u-over-slide u-shading u-over-slide-2">
+              <h3 class="u-gallery-heading"></h3>
+              <p class="u-gallery-text"></p>
+            </div>
+          </div>
+          <div class="u-effect-fade u-gallery-item">
+            <div class="u-back-slide" data-image-width="491" data-image-height="484">
+              <img class="u-back-image u-expanded" src="images/ironstark_high1.png">
+            </div>
+            <div class="u-over-slide u-shading u-over-slide-3">
+              <h3 class="u-gallery-heading"></h3>
+              <p class="u-gallery-text"></p>
+            </div>
+          </div>
+          <div class="u-effect-fade u-gallery-item">
+            <div class="u-back-slide" data-image-width="491" data-image-height="484">
+              <img class="u-back-image u-expanded" src="images/ironstark_low1.png">
+            </div>
+            <div class="u-over-slide u-shading u-over-slide-4">
+              <h3 class="u-gallery-heading"></h3>
+              <p class="u-gallery-text"></p>
+            </div>
+          </div>
+          <div class="u-effect-fade u-gallery-item">
+            <div class="u-back-slide" data-image-width="491" data-image-height="484">
+              <img class="u-back-image u-expanded" src="images/ironstark_hybrid1.png">
+            </div>
+            <div class="u-over-slide u-shading u-over-slide-5">
+              <h3 class="u-gallery-heading"></h3>
+              <p class="u-gallery-text"></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="u-clearfix u-white u-section-10" id="sec-1396">
       <div class="u-expanded-width u-palette-3-light-3 u-shape u-shape-rectangle u-shape-1"></div>
       <h2 class="u-text u-text-default u-text-1">3. Gallery</h2>
       <p class="u-text u-text-2">Although I was able to produce a few good results. The better ones being Derek/Nutmeg and Tony Stark/Iron Man and the lesser ones being Hippo/Zebra and Chris Evans/Chris Hemsworth. The Chris's hybrid is okay, from close up it looks like Chris Evans and far away it looks like a different person, it just does not look entirely like Chris Hemswoth. The hippo and zebra was the most severe failure likely because the zebra stripes are apparent enough that you have to go considerably far away to not see the stripes.&nbsp;</p>
@@ -495,10 +553,19 @@
             </div>
           </div>
           <div class="u-effect-fade u-gallery-item">
+            <div class="u-back-slide" data-image-width="379" data-image-height="396">
+              <img class="u-back-image u-expanded" src="images/evansworth.png" alt="Chris Evansworth">
+            </div>
+            <div class="u-over-slide u-shading u-over-slide-2">
+              <h3 class="u-gallery-heading">Chris Evansworth</h3>
+              <p class="u-gallery-text">Chris Evans + Chris Hemsworth</p>
+            </div>
+          </div>
+          <div class="u-effect-fade u-gallery-item">
             <div class="u-back-slide" data-image-width="491" data-image-height="484">
               <img class="u-back-image u-expanded" src="images/ironstark_hybrid.png" alt="I am Iron Man">
             </div>
-            <div class="u-over-slide u-shading u-over-slide-2">
+            <div class="u-over-slide u-shading u-over-slide-3">
               <h3 class="u-gallery-heading">I am Iron Man</h3>
               <p class="u-gallery-text">Tony Stark + Iron Man Helmet</p>
             </div>
@@ -507,24 +574,33 @@
             <div class="u-back-slide" data-image-width="323" data-image-height="189">
               <img class="u-back-image u-expanded" src="images/zippo.png" alt="The Zippo">
             </div>
-            <div class="u-over-slide u-shading u-over-slide-3">
+            <div class="u-over-slide u-shading u-over-slide-4">
               <h3 class="u-gallery-heading">The Zippo</h3>
               <p class="u-gallery-text">Zebra + Hippo</p>
             </div>
           </div>
           <div class="u-effect-fade u-gallery-item">
             <div class="u-back-slide" data-image-width="379" data-image-height="396">
-              <img class="u-back-image u-expanded" src="images/evansworth.png" alt="Chris Evansworth">
+              <img class="u-back-image u-expanded" src="images/evansworth_colored1.png" alt="Chris Evansworth (Colored)">
             </div>
-            <div class="u-over-slide u-shading u-over-slide-4">
-              <h3 class="u-gallery-heading">Chris Evansworth</h3>
+            <div class="u-over-slide u-shading u-over-slide-5">
+              <h3 class="u-gallery-heading">Chris Evansworth (Colored)</h3>
               <p class="u-gallery-text">Chris Evans + Chris Hemsworth</p>
+            </div>
+          </div>
+          <div class="u-effect-fade u-gallery-item">
+            <div class="u-back-slide" data-image-width="491" data-image-height="484">
+              <img class="u-back-image u-expanded" src="images/ironstark_hybrid1.png" alt="I am Iron Man (Colored)">
+            </div>
+            <div class="u-over-slide u-shading u-over-slide-6">
+              <h3 class="u-gallery-heading">I am Iron Man (Colored)</h3>
+              <p class="u-gallery-text">Tony Stark + Iron Man</p>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="u-clearfix u-palette-4-light-3 u-section-10" id="sec-324b">
+    <section class="u-clearfix u-palette-4-light-3 u-section-11" id="sec-324b">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">
           <span style="font-weight: 700;">Image Blending</span>
@@ -537,7 +613,7 @@
         </p>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-section-11" id="sec-eabc">
+    <section class="u-align-center u-clearfix u-section-12" id="sec-eabc">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-text u-text-default u-text-1">Results of Laplacian Stacks</h2>
         <div class="u-gallery u-layout-grid u-lightbox u-show-text-on-hover u-gallery-1">
@@ -684,17 +760,13 @@
         <p class="u-text u-text-4">(c)</p>
         <p class="u-text u-text-default u-text-5">Column (a) are the results the Laplacian stack LA multiplied by the mask's Gaussian stack.<br>Column (b) are the results of the Laplacian stack LB multiplied by 1 minus the masks's Gaussian Stack.<br>Column (c) is the row-wise sum of column (a) and column (b).<br>**Note that the final row is just to demonstrate raw slicing, these images are not used in final calculations**
         </p>
-      </div>
-    </section>
-    <section class="u-clearfix u-section-12" id="sec-ee8b">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-clearfix u-gutter-0 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout" style="">
             <div class="u-layout-row" style="">
               <div class="u-align-center u-container-style u-layout-cell u-left-cell u-size-30 u-size-xs-60 u-white u-layout-cell-1" src="">
                 <div class="u-container-layout u-container-layout-1">
-                  <h2 class="u-text u-text-default u-text-1">The Oraple</h2>
-                  <p class="u-text u-text-2">Our final blended image can then be made by summing across each image in the LS Stack. The final image is then normalized such that pixel values are between 0 and 1.&nbsp;<br>
+                  <h2 class="u-text u-text-default u-text-6">The Oraple</h2>
+                  <p class="u-text u-text-7">Our final blended image can then be made by summing across each image in the LS Stack. The final image is then normalized such that pixel values are between 0 and 1.&nbsp;<br>
                     <br>Shown on the right is the blending of an apple with an orange with a left window mask<br>
                   </p>
                 </div>
@@ -726,7 +798,7 @@
       </div>
       <h4 class="u-text u-text-default u-text-3">Basic Blending</h4>
       <h4 class="u-text u-text-default u-text-4">Matching Background</h4>
-      <h4 class="u-text u-text-5">Adding Contrast Stretching</h4>
+      <h4 class="u-align-center u-text u-text-5">Adding Contrast Stretching</h4>
       <h4 class="u-align-center u-text u-text-6">**Gray-to-Color Gradient Idea**</h4>
       <p class="u-text u-text-7">The images above are the result of two different Iron Man images: an image of the silver Mark 2 armour blended with the red and gold Mark 3 armour.&nbsp; However, this idea of fading from gray to colored gave me an idea of taking on image and creating a color gradient on it. This can easily be done with the blending algorithm by taking an image and a grayscaled version of that image, and then running the blend algorithm on the two images. This then creates a gradual grayscale-to-color blend across the masks. An example is seen below in the gallery with a beach photograph.</p>
     </section>
@@ -837,5 +909,16 @@
         <p class="u-small-text u-text u-text-variant u-text-1">CS 194-26: Computational Photography and Computer Vision<br>Project 2: Fun with Filters and Frequencies<br>Norman Karr | nkarr11@berkeley.edu | UC Berkeley
         </p>
       </div></footer>
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="https://nicepage.com/" target="_blank">
+        <span>Website Builder Software</span>
+      </a>. 
+    </section>
   </body>
 </html>
