--- a/prokudin-gorskii/index.html
+++ b/prokudin-gorskii/index.html
@@ -76,7 +76,7 @@
               <div class="u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2">
-                  <li class="u-nav-item"><a class="u-button-style u-nav-link" href="http2://normankarr.com" style="padding: 10px 0px;">Norman Karr</a>
+                  <li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://normankarr.com" style="padding: 10px 0px;">Norman Karr</a>
                   </li>
                   <li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://normankarr.com/computational-photography/prokudin-gorskii/" style="padding: 10px 0px;">Prokudin-Gorskii</a>
                   </li>
